Version 1.01 Исправлены: getTrainingSessionsForDay getTrainingSessionsForDayAndTime (сложность не соответствовала ТЗ)
- отредактированы тесты под новую реализацию.